# eigen-lgsm-vs-kdl

./: .gitmodules  CMakeLists.txt  README.md  configure.sh
cmake/: FindEigen.cmake
src/: main.cpp
